--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	adafruit/Adafruit GFX Library @ ^1.10.14
 	adafruit/Adafruit SSD1306 @ ^2.5.1
 	adafruit/Adafruit BusIO @ ^1.11.3
+	gmarty2000/Buzzer @ ^1.0.0
